# SDLC

./: .gitignore  CLAUDE.md  pyproject.toml  sdlc_run.py
Generated-Docs/: 00-BRD.md  00-ROADMAP.md  01-PRD.md  01-ROADMAP.md  02-ARCH.md  02-PRD.md  03-ARCH.md  03-CLAUDE.md  04-FEATURE-CATALOG.md  04-QUALITY.md  05-FEATURE-CATALOG.md  05-QUALITY.md  06-CLAUDE-ENFORCEMENT.md  06-INTERACTION-MAP.md  06-SECURITY-ARCH.md  07-DATA-MODEL.md  07-INTERACTION-MAP.md  07-MCP-TOOL-SPEC.md  08-BACKLOG.md  08-DESIGN-SPEC.md  08-MCP-TOOL-SPEC.md  09-API-CONTRACTS.md  09-DATA-MODEL.md  09-DESIGN-SPEC.md  10-API-CONTRACTS.md  10-DATA-MODEL.md  10-DESIGN-SPEC.md  11-API-CONTRACTS.md  11-BACKLOG.md  11-TESTING.md  12-ENFORCEMENT.md  12-USER-STORIES.md  13-BACKLOG.md  13-TESTING.md  14-AGENT-HANDOFF-PROTOCOL.md  14-CLAUDE.md  15-AGENT-INTERACTION-DIAGRAM.md  15-ENFORCEMENT.md  16-BRD.md  16-INFRA-DESIGN.md  (+14 more)
Requirement/: MASTER-BUILD-SPEC.md
agents/: __init__.py
api/: app.py
control_panel/: app.py  theme.py
dashboard/: app.py  config.py
docs/: AGENT-NATIVE-UPGRADE-PLAN.md  CONVERSATION-PLAYBOOK.md
frontend/: package-lock.json
migrations/: 001_create_agent_registry.sql  002_create_cost_metrics.sql  003_create_audit_events.sql  004_create_pipelines.sql  005_create_knowledge_exceptions.sql  006_create_session_context.sql  007_create_approval_requests.sql  008_create_pipeline_checkpoints.sql  009_create_mcp_events_and_agent_versioning.sql  010_create_indexes.sql  011_create_rls_policies.sql
schemas/: data_shapes.py
scripts/: migrate.py
sdk/: __init__.py  base_agent.py  (+2 more)
(+332 files in other folders)
