[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Production-grade AI agent control plane for full software delivery lifecycle"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "structlog>=24.1.0",
    "pydantic>=2.6.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "streamlit>=1.31.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres]>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.isort]
known-first-party = ["services", "sdk", "api", "mcp_servers", "dashboard"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["services", "mcp_servers", "api", "dashboard", "sdk"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
